# ITHelpdesk

./: .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  README.md  azure.yaml  pyproject.toml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/Rai/: history.md
.squad/agents/dozer/: charter.md  history.md
.squad/agents/fact-checker/: history.md
.squad/agents/morpheus/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: history.md
.squad/agents/switch/: charter.md  history.md
.squad/agents/tank/: charter.md  history.md
.squad/agents/trinity/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/decisions/archive/: 2026-07-08T17-19-03-05-00-decisions-older-than-30-days.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-07-08T17-50-46Z-live-triage-kb-deflection-fix.md
.squad/orchestration-log/: 2026-07-08T17-50-46Z-coordinator.md  2026-07-08T17-50-46Z-trinity.md
.squad/rai/: audit-trail.md
assets/: Sample-Prompts.txt  ServiceNow-OpenAPI-spec.json  ServiceNow-instance-details.txt
assets/kb/: laptop-performance.md  outlook-email-issues.md  password-reset.md  printer-issues.md  software-installation.md  unable-to-login.md  vpn-connectivity.md
docs/: index.html
frontend/: .gitignore  package-lock.json  package.json  server.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: HelpdeskChat.tsx
frontend/lib/: agui.ts
frontend/scripts/: copy-standalone-assets.mjs  mock-agui-server.mjs
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/modules/: acr.bicep  apim.bicep  appservice.bicep  foundry.bicep  identity.bicep  kb-connection.bicep  keyvault.bicep  mcp-connection.bicep  monitoring.bicep  search-rbac.bicep  search.bicep  storage.bicep
scripts/: agui_hitl_check.py  agui_live_check.py  postprovision.ps1  postprovision.py  postprovision.sh  preprovision.ps1  preprovision.sh  requirements-postprovision.txt
src/: requirements.txt
src/helpdesk/: __init__.py
src/helpdesk/agents/: README.md  __init__.py  embeddings.py  incident.py  kb.py  prompts.py  search_client.py  (+3 more)
src/orchestrator/: .dockerignore  Dockerfile  main.py  requirements.txt
src/servicenow/: README.md  __init__.py  client.py  errors.py  mapping.py
tests/: README.md  conftest.py  test_config_settings.py  test_embeddings_setup.py  test_foundry_agents_setup.py  test_hook_venv_contract.py  test_hosted_orchestrator_setup.py  test_incident_agent_definition.py  test_kb_assets.py  test_live_search_confidence.py  test_openapi_import.py  test_orchestrator_flows.py  test_orchestrator_hosted.py  test_orchestrator_telemetry.py  test_servicenow_client.py  test_smoke.py  test_triage_agent_definition.py  test_ui_app.py
(+17 files in other folders)
