[project]
name = "servicenow-it-helpdesk-agent"
version = "0.1.0"
description = "Azure Solution Accelerator: a ServiceNow IT helpdesk AI agent (triage + incident management) orchestrated with Microsoft Agent Framework on Azure AI Foundry."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# ---------------------------------------------------------------------------
# Shared runtime dependencies. Per-component extras are declared under
# [project.optional-dependencies] so each team can `pip install -e .[ui]` etc.
# Pin/adjust versions during implementation — these are sensible starting
# points chosen by Morpheus; owning agents finalize.
# ---------------------------------------------------------------------------
dependencies = [
  "azure-identity>=1.17",          # DefaultAzureCredential / managed identity
  "azure-keyvault-secrets>=4.8",   # read ServiceNow creds from Key Vault
  "python-dotenv>=1.0",            # local dev env loading
  "pydantic>=2.7",                 # config + tool schemas
]

[project.optional-dependencies]
# Owner: Trinity — Orchestrator + Foundry agents (Azure AI Agents SDK)
orchestrator = [
  "azure-ai-projects==2.3.0",     # Foundry project SDK (new-experience agents via .agents)
  "openai>=1.40",
]
# Owner: Trinity — triage KB grounding + indexing
agents = [
  "azure-search-documents>=11.5.0",
  "azure-ai-projects==2.3.0",
]
# Owner: Switch — ServiceNow / APIM MCP client
servicenow = [
  "httpx>=0.27",
  "mcp>=1.0",                     # Model Context Protocol client
]
# Owner: Trinity/Morpheus — App Service UI
ui = [
  "agent-framework-ag-ui==1.0.0rc8",
  "agent-framework==1.11.0",
  "ag-ui-protocol==0.1.19",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
]
# Owner: Dozer — tests
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Two top-level import roots under src/: the `helpdesk` umbrella package
# (helpdesk.shared / .orchestrator / .agents / .ui) and the standalone
# `servicenow` package. Intra-umbrella imports are relative; the servicenow
# client is imported absolutely. See .squad/decisions for the layout contract.
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Jinja2 templates ship with the UI package (needed for wheel/sdist builds).
"helpdesk.ui" = ["templates/*.html"]
